--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,5 +1,6 @@
-header {
+h1 {
   text-align: center;
   font-family: 'Playfair Display', serif;
-  font-size: 20pt;
+  font-size: 40pt;
+  padding: 7% 0;
 }
