Removed unnecessary styling and changed font.

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,8 +1,7 @@
 .AboutMe {
   display: flex;
   justify-content: center;
-  font-family: 'Playfair Display', serif;
-  font-size: 25px;
+  font-family: 'Fira Code', monospace;  font-size: 25px;
   text-indent: 50px;
   margin: 5% 15%;
   font-weight: bold;
