--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,6 +1,5 @@
 h1 {
   text-align: center;
-  font-family: 'Playfair Display', serif;
-  font-size: 40pt;
+  font-family: 'Fira Code', monospace;  font-size: 40pt;
   padding: 3% 0;
 }
