--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -1,4 +1,5 @@
 .PortfolioItem {
+  font-family: 'Fira Code', monospace;
   display: flex;
   justify-content: space-evenly;
   margin: 15px 5% 10px 5%;
@@ -21,6 +22,7 @@
 
 .Thumbnail {
   box-shadow: 0px 8px 15px -10px black;
+  max-width: 400px;
 }
 
 .Tag {
