--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -1,32 +1,62 @@
 .PortfolioItem {
   font-family: 'Fira Code', monospace;
-  display: flex;
-  justify-content: space-evenly;
+  min-height: 425px;
   margin: 15px 5% 10px 5%;
   box-shadow: 0px 15px 25px -25px black;
+  display: grid;
+  justify-content: center;
+  /* grid-template-columns: repeat(6, 1fr);  */
+  /* grid-template-rows: 40px 230px 25px 50px; */
+  grid-column-gap: 300px;
+  grid: 
+    ". title title desc desc ." 40px
+    ". img img para para ." 230px
+    ". icons icons . . ." 25px
+    ". buttons buttons . . ." 75px
+    / 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .Left {
+  /* display: grid; */
   margin: 15px 0px;
+  grid-column: 2 / 4;
+  justify-items: center;
+  /* justify-content: center; */
+  /* place-content: center; */
 }
 
 .Right {
+  /* display: grid; */
+  /* display: flex; */
   margin: 15px 0px;
-  max-width: 40%;
-  text-indent: 50px;
+  /* text-indent: 50px; */
+  grid-column: 4 / 6;
+  justify-content: center;
+  /* place-items: center; */
 }
 
 .Title {
   text-align: center;
+  /* justify-self: center; */
+  grid-area: title;
+  /* grid-column: 2 / 4; */
 }
 
 .Thumbnail {
   box-shadow: 0px 8px 15px -10px black;
   max-width: 400px;
+  max-height: 250px;
+  grid-area: img;
+  align-self: center;
+  /* display: flex; */
+  /* grid-column: 2 / 4; */
+  /* grid-row: 2 / 3; */
 }
 
 .Tag {
+  display: flex;
   margin-top: 10px;
+  grid-area: icons; 
 }
 
 .Tag i {
@@ -44,6 +74,7 @@
   display: flex;
   justify-content: space-evenly;
   margin: 10px;
+  grid-area: buttons;
 }
 
 .Buttons a {
@@ -71,7 +102,14 @@ a.CodeButton:hover {
 
 .DescriptionHeader {
   text-align: center;
-  font-weight: normal;
+  /* font-weight: normal; */
+  grid-area: desc;
+}
+
+.Description {
+  grid-area: para;
+  /* grid-column: 4 / 6;
+  grid-row: 2 / 3; */
 }
 
 
