--- a/src/components/NavElement/NavElement.css
+++ b/src/components/NavElement/NavElement.css
@@ -1,3 +1,12 @@
+.NavElement {
+  display: flex;
+  flex-direction: column;
+}
+
 .NavElement a {
   color: black;
+}
+
+.NavElement span {
+  margin-top: 5px;
 }
