--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -1,8 +1,10 @@
 .PortfolioItem {
   font-family: 'Fira Code', monospace;
+  background-color: #fffcf7;
   min-height: 425px;
-  margin: 15px 5% 10px 5%;
-  box-shadow: 0px 15px 25px -25px black;
+  margin: 50px 10%;
+  padding: 20px;
+  /* box-shadow: 0px 15px 25px -25px black; */
   display: grid;
   justify-content: center;
   /* grid-template-columns: repeat(6, 1fr);  */
@@ -21,6 +23,7 @@
   margin: 15px 0px;
   grid-column: 2 / 4;
   justify-items: center;
+  grid-row: 1 / 6;
   /* justify-content: center; */
   /* place-content: center; */
 }
@@ -31,6 +34,7 @@
   margin: 15px 0px;
   /* text-indent: 50px; */
   grid-column: 4 / 6;
+  grid-row: 1 / 6;
   justify-content: center;
   /* place-items: center; */
 }
@@ -47,7 +51,7 @@
   max-width: 400px;
   max-height: 250px;
   grid-area: img;
-  align-self: center;
+  /* align-self: center; */
   /* display: flex; */
   /* grid-column: 2 / 4; */
   /* grid-row: 2 / 3; */
