--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,8 +1,12 @@
+body {
+  background-color: #f6f1eb;
+}
+
 .AboutMe {
   display: flex;
   justify-content: center;
-  font-family: 'Fira Code', monospace;  font-size: 25px;
+  font-family: 'Fira Code', monospace;  font-size: 22px;
   text-indent: 50px;
   margin: 5% 15%;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
