--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,6 @@
 .Navigation {  
   font-family: 'Fira Code', monospace;
+  color: #444;
   text-align: center;
   top: 0;
   background-color:#f6f1eb;
