--- a/src/components/NavElement/NavElement.css
+++ b/src/components/NavElement/NavElement.css
@@ -10,3 +10,9 @@
 .NavElement span {
   margin-top: 5px;
 }
+
+@media screen and (max-width: 850px) {
+  .NavElement span {
+    display: none;
+  }
+}
