--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -17,6 +17,15 @@
   margin: 0 auto;
 }
 
+@media screen and (min-width: 360px) and (max-width: 850px) {
+
+  .Items {
+    width: 100%;
+    justify-content: space-around;
+  }
+
+}
+
 .Navigation a {
   color: black;
 }
