--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -21,10 +21,8 @@
 }
 
 .Left {
-  /* display: grid; */
   margin: 15px 0px;
   grid-column: 2 / 4;
-  justify-items: center;
   grid-row: 1 / 6;
   /* justify-content: center; */
   /* place-content: center; */
@@ -49,10 +47,12 @@
 }
 
 .Thumbnail {
+  display: flex;
   box-shadow: 0px 8px 15px -10px black;
   max-width: 400px;
   max-height: 250px;
   grid-area: img;
+  margin: 0 auto;
   /* align-self: center; */
   /* display: flex; */
   /* grid-column: 2 / 4; */
@@ -98,7 +98,7 @@
 
 .Buttons {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: 10px;
   grid-area: buttons;
 }
@@ -108,6 +108,7 @@
   border: solid black;
   border-radius: 25px;
   padding: 8px 30px 10px 30px;
+  margin: 0 30px;
 }
 
 .Buttons a:hover {
@@ -139,4 +140,33 @@
   grid-row: 2 / 3; */
 }
 
+@media screen and (min-width: 360px) and (max-width: 1250px) {
+  
+  .PortfolioItem {
+    display: flex;
+    flex-direction: column;
+    /* grid: 
+    "title title title title title title" 40px
+    "img" 230px
+    "icons" 25px
+    "buttons" 75px
+    "para" 40px
+    / 1fr; */
+  }
 
+  .Thumbnail {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+  }
+  
+  .Description {
+    max-width: 450px;
+    margin: 0 auto;
+  }
+
+  .Buttons a {
+    margin: 0 10px;
+  }
+  
+}
