--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -13,3 +13,10 @@ body {
   background-color: #fffcf7;
   /* font-weight: bold; */
 }
+
+@media screen and (max-width : 850px) {
+  .AboutMe {
+    margin: 0 auto;
+  }
+}
+
