--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -7,6 +7,9 @@
   padding: 20px;
   display: flex;
   justify-content: space-evenly;
+  position: relative;
+  animation-name: slide;
+  animation-duration: 1s;
 }
 
 .Left {
@@ -116,6 +119,12 @@
   text-align: center;
   /* font-weight: normal; */
   /* grid-area: desc; */
+}
+
+.Description {
+  position: relative;
+  animation-name: slide;
+  animation-duration: 2s;
 }
 
 @media screen and (min-width: 360px) and (max-width: 1140px) {
