--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -7,6 +7,7 @@
   padding: 10px;
   position: -webkit-sticky;
   position: sticky;
+  z-index: 100;
   /* box-shadow: 0 15px 25px -20px black; */
 }
 
