--- a/src/components/PortfolioItem/PortfolioItem.css
+++ b/src/components/PortfolioItem/PortfolioItem.css
@@ -1,3 +1,8 @@
+.anchor {
+  position: absolute;
+  transform: translateY(-15vh);
+}
+
 .PortfolioItem {
   font-family: 'Fira Code', monospace;
   color: #444;
