--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -50,7 +50,17 @@ body {
 @media screen and (max-width : 850px) {
   .AboutMe {
     margin: 0 auto;
+  }
+
+  .AboutText {
     font-size: 18px;
   }
 }
+
+@media screen and (max-width: 640px) {
+  .AboutText {
+    font-size: 15px;
+  }
+}
+
 
